# fdf

./: 02.c  CMakeLists.txt  a.out
new/: CMakeLists.txt  a.out  karta  kompilyaziya  new_new.c  scan_karta.c  to4ka.c
